# polodb-node

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.mjs  binding.d.ts  binding.js  index.d.ts  index.js  jest.config.ts  package.json  pnpm-lock.yaml  tests.mjs  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: bson.ts  document.rs  filter.ts  index.test.ts  index.ts  lib.rs  mocks.test.ts  update.ts
